# School-Record-App

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.md  PRIVACY.md  README.md  index.html  manual.html  package-lock.json  package.json  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: manual.html
docs/sections/: section1.html  section10.html  section11.html  section2.html  section3.html  section4.html  section5.html  section6.html  section7.html  section8.html  section9.html
manual/: index.html
src/: App.vue  main.js  manual.css  style.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  db.rs  engine.rs  main.rs  schema.sql  state.rs  types.rs
src-tauri/src/commands/: area.rs  config.rs  crypto.rs  file.rs  mod.rs  project.rs  record.rs  replace.rs  snapshot.rs  student.rs  synonym.rs
src-tauri/src/tests/: config_tests.rs  crypto_cmd_tests.rs  crypto_tests.rs  db_tests.rs  engine_tests.rs  mod.rs  project_tests.rs  record_tests.rs  replace_tests.rs  snapshot_tests.rs  student_tests.rs  synonym_tests.rs
src/components/: ActivityCard.vue  ActivityModal.vue  AreaCard.vue  AreaModal.vue  AreaStudentModal.vue  BaseModal.vue  BulkStudentImportModal.vue  CellHistoryModal.vue  DiffView.vue  PasswordModal.vue  ReleaseNotesModal.vue  SnapshotModal.vue  StudentBulkImportModal.vue  StudentModal.vue  WizardLayout.vue  WorkspaceSidebar.vue
(+39 files in other folders)
